fix: Add SWC Linux binary for Vercel deployment - Added @swc/core-linux-x64-gnu to devDependencies - Added optionalDependencies section with both Rollup and SWC binaries - Updated .npmrc to use include=optional instead of optional=true - Fixes 'Failed to load native binding' error for @swc/core

--- a/.npmrc
+++ b/.npmrc
@@ -1,7 +1,7 @@
-# Fix for Rollup optional dependencies issue on Vercel
+# Fix for Rollup and SWC optional dependencies issue on Vercel
 # https://github.com/npm/cli/issues/4828
 legacy-peer-deps=false
 fund=false
 audit=false
-optional=true
+include=optional
 
