--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,7 @@
   "installCommand": "npm install",
   "devCommand": "npm run dev",
   "ignoreCommand": "git diff --quiet HEAD^ HEAD .",
+  "cleanUrls": true,
   "rewrites": [
     {
       "source": "/(.*)",
