--- a/.vercelignore
+++ b/.vercelignore
@@ -1,38 +1,49 @@
-# AGGRESSIVE IGNORE - Only include essential build files
-# Ignore everything by default
-*
-
-# Allow only essential files for Vite React build
-!src/
-!public/
-!package.json
-!package-lock.json
-!vite.config.ts
-!tailwind.config.ts
-!tsconfig.json
-!tsconfig.app.json
-!tsconfig.node.json
-!postcss.config.js
-!components.json
-!index.html
-!vercel.json
-!.vercelignore
-!eslint.config.js
-
-# Explicitly ignore problematic directories
+# Ignore Supabase files that might confuse Vercel
 supabase/
-node_modules/
-dist/
-.git/
-
-# Ignore all SQL and documentation files
 *.sql
 *.md
-*.html
+debug_*.html
+test_*.sql
+fix_*.sql
+create_*.sql
+check_*.sql
+verify_*.sql
+setup_*.sql
+complete_*.sql
+simple_*.sql
+final_*.sql
+definitive_*.sql
+comprehensive_*.sql
+aggressive_*.sql
+immediate_*.sql
+quick_*.sql
+safe_*.sql
+manual_*.sql
+migrate_*.sql
+clear_*.sql
+delete_*.sql
+insert_*.sql
+update_*.sql
+disable_*.sql
+FORCE_*.sql
+CLEANUP_*.sql
+CHECK_*.sql
+DIAGNOSE_*.sql
+FIX_*.sql
+VERIFY_*.sql
+QUICK_*.sql
+SIMPLE_*.sql
+COMPLETE_*.sql
+MINIMAL_*.sql
+# Ignore development files
 *.zip
-*.txt
-
-# Ignore any potential serverless patterns
+Untitled-*.txt
+h origin main
+# Ignore any potential API or function files
 api/
 functions/
 serverless/
+# Ignore documentation that might confuse Vercel
+VERCEL_BUILD_ERROR_FIX.md
+404_ROUTING_FINAL_FIX.md
+VERCEL_DEPLOYMENT_FIX.md
